Initial login/signup page styling/organization

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+
+.login-header {
+  background-color: #3b5998;
+}
+
+.signup-wrapper {
+  background-color: #d8dfea;
+}
