--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,11 +13,42 @@
  *= require_tree .
  *= require_self
  */
+ body {
+   margin: 0;
+   padding: 0;
+   font-family: "Lucida Grande";
+ }
+
+ #root {
+
+ }
 
 .login-header {
   background-color: #3b5998;
+  color: white;
+  width: 100%;
+  height: 68px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
-.signup-wrapper {
-  background-color: #d8dfea;
+.landing-page-main {
+  background-color: #edf0f5;
+  width: 100%;
+  height: 632px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.signup-container {
+
+}
+
+.signup-static-content {
+
+}
+
+.signup-static-content ul {
+  list-style: none;
 }
