--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,6 +17,7 @@
    margin: 0;
    padding: 0;
    font-family: "Lucida Grande";
+   /* font-family: 'Freight Sans Bold', Helvetica, Arial, sans-serif; */
  }
 
  #root {
@@ -31,24 +32,89 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  min-width: 980px;
 }
 
 .landing-page-main {
   background-color: #edf0f5;
   width: 100%;
   height: 632px;
-  display: flex;
-  justify-content: space-around;
 }
 
 .signup-container {
-
+  width: 980px;
+  display: flex;
+  justify-content: space-around;
+  margin: auto;
 }
 
 .signup-static-content {
+  width: 565px;
+}
 
+.signup-static-content h4 {
+  font-size: 28px;
+  color: #333;
+  padding: 36px 0 16px 0;
+  font-weight: 700;
+  line-height: 36px;
+  width: 408px;
 }
 
 .signup-static-content ul {
   list-style: none;
+}
+
+.signup-static-content li {
+  font-size: 12px;
+  margin-top: 20px;
+  padding-bottom: 10px;
+}
+
+.signup-form-container {
+  width: 399px;
+}
+
+.signup-form input {
+  width: 377px;
+  font-size: 18px;
+  border: 1px solid #bdc7d8;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  padding: 8px 10px;
+  cursor: text;
+}
+
+.first-and-last-name {
+  width: 399px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.first-and-last-name input {
+  width: 172px;
+}
+
+.signup-form h3 {
+  font-size: 36px;
+  color: #333;
+}
+
+#signup-btn {
+  font-size: 19px;
+  color: white;
+  width: 195px;
+  padding: 7px 20px;
+  background: linear-gradient(#67ae55, #578843);
+  background-color: #69a74e;
+  box-shadow: inset 0 1px 1px #a4e388;
+  border-color: #3b6e22 #3b6e22 #2c5115;
+  text-align: center;
+  font-weight: bold;
+  text-shadow: 0 1px 2px rgba(0,0,0,.5);
+  cursor: pointer;
+}
+
+.signup-btn:hover {
+
 }
