--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,7 +28,7 @@
   background-color: #3b5998;
   color: white;
   width: 100%;
-  height: 68px;
+  height: 82px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -38,7 +38,7 @@
 .landing-page-main {
   background-color: #edf0f5;
   width: 100%;
-  height: 632px;
+  height: 598px;
 }
 
 .signup-container {
@@ -119,14 +119,28 @@
 
 }
 
-.birthday-signup input {
-  cursor: default;
+.birthday-signup p {
+  font-size: 18px;
+  color: #1d2129;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.birthday-signup select {
+  font-size: 13px;
+  height: 30px;
+  padding: 5px;
+  border: 1px solid #bdc7d8;
+  background-color: rgb(248, 248, 248);
+  border-radius: 5px;
+  color: black;
+  box-sizing: border-box;
+  align-items: center;
 }
 
 .gender-signup {
   display: flex;
   width: 175px;
-
 }
 
 .gender-signup div {
