--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -62,6 +62,7 @@
   font-weight: 400;
   background-color: white;
   padding: 3px 3px 4px 3px;
+  margin-top: 4px;
 }
 
 .password-login {
@@ -78,6 +79,7 @@
   font-weight: 400;
   background-color: white;
   padding: 3px 3px 4px 3px;
+  margin-top: 4px;
 }
 
 .both-login-forms button {
@@ -160,6 +162,16 @@
 .signup-form h3 {
   font-size: 36px;
   color: #333;
+  font-weight: 700;
+  margin-bottom: 5px;
+}
+
+.signup-form p {
+  font-family: "Freight Sans", Helvetica, Arial, sans-serif;
+  font-size: 19px;
+  color: rgb(51, 51, 51);
+  font-weight: 400;
+  margin-bottom: 20px;
 }
 
 #signup-btn {
@@ -212,8 +224,18 @@
   cursor: default;
 }
 
+#female-radio {
+  width: 18px;
+  height: 18px;
+}
+
 .female {
   width: 90px;
+}
+
+#male-radio {
+  width: 18px;
+  height: 18px;
 }
 
 .male {
