--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -321,6 +321,11 @@
   border-right: 1px solid rgb(221, 223, 226);
 }
 
+.post-form-header i {
+  color: rgb(75, 79, 86);
+  font-size: 12px;
+}
+
 .make-post-modal-btn {
   color: rgb(75, 79, 86);
   cursor: pointer;
@@ -336,5 +341,43 @@
 }
 
 .create-post-btn {
-  
+  background-color: rgb(66, 103, 178);
+  color: white;
+  box-sizing: content-box;
+  cursor: pointer;
+  font-size: 12px;
+  border: 1px solid rgb(66, 103, 178);
+  padding: 0 16px;
+  border-radius: 2px;
+  line-height: 22px;
+  margin: 7.5px;
+}
+
+.post-form-footer {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.post-profile-pic {
+  background-color: grey;
+  width: 38px;
+  height: 38px;
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 19px;
+  margin: 12px 0 0 12px;
+}
+
+.post-body-wrapper {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.post-body {
+  padding: 23px 48px 13px 12px;
+  border: none;
+  color: rgb(29, 33, 41);
+  cursor: text;
+  font-size: 14px;
+  width: 404px;
+  height: 35px
 }
