Styled post item header and body

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -296,6 +296,7 @@
   border: 1px solid rgb(221, 223, 226);
   margin: 13px;
   background-color: white;
+  border-radius: 1px;
 }
 
 .post-form-header {
@@ -557,6 +558,7 @@
   border: 1px solid rgb(221, 223, 226);
   margin: 13px;
   background-color: white;
+  border-radius: 1px;
 }
 
 .post-index {
@@ -568,6 +570,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  padding: 12px 12px 0 12px;
 }
 
 .post-item-header-right {
@@ -581,7 +584,7 @@
   height: 38px;
   border: 1px solid rgb(0, 0, 0);
   border-radius: 19px;
-  margin: 12px 0 0 12px;
+  margin: 0 8px 0 0;
 }
 
 .post-item-name-and-options {
@@ -616,8 +619,37 @@
   font-size: 14px;
   font-weight: bold;
   text-decoration: none;
+  margin: 0;
 }
 
 .post-item-name:hover {
   text-decoration: underline;
+}
+
+.post-item-footer {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.like-btn {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.comment-btn {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.post-item-body {
+  width: 492px;
+  padding: 0 0 12px 0;
+  margin: 6px 0 0 14px;
+  border-bottom: 1px solid #e5e5e5;
+  color: rgb(29, 33, 41);
+  font-size: 14px;
+  font-weight: 400;
 }
