Add browser tab and nav bar logos

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -7,4 +7,10 @@
   <% end %>
 </script>
 
+<script type="text/javascript">
+  window.staticImages = {
+    headerImage: "<%= asset_url("nav_logo.png") %>"
+  }
+</script>
+
 <main id="root"></main>
