--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,7 +26,8 @@
  }
 
 .login-header {
-  background-color: #4267b2;
+  /* background-color: #4267b2; */
+  background-color: rgb(59, 89, 152);
   color: white;
   width: 100%;
   height: 82px;
@@ -442,7 +443,7 @@
   width: 25px;
   height: 25px;
   border-radius: 2px;
-  background-color: white;
+  /* background-color: white; */
   cursor: pointer;
 }
 
