--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -84,9 +84,8 @@
   margin-top: 4px;
 }
 
-.both-login-forms button {
+.login-btns {
   margin-right: 14px;
-  height: 24px;
   background-color: rgb(66, 103, 178);
   border-radius: 2px;
   border: 1px solid rgb(41, 72, 125);
@@ -95,9 +94,10 @@
   color: white;
   font-size: 12px;
   font-weight: 400;
+  text-decoration: none;
 }
 
-.both-login-forms button:hover {
+.login-btns:hover {
   background-color: #3b5998;
 }
 
@@ -440,11 +440,11 @@
 }
 
 .nav-logo {
-  width: 25px;
-  height: 25px;
+  width: 24px;
+  height: 24px;
   border-radius: 2px;
-  /* background-color: white; */
   cursor: pointer;
+  margin-right: 8px;
 }
 
 .nav-search {
