Mapping user info to posts

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -9,7 +9,11 @@
 
 <script type="text/javascript">
   window.staticImages = {
-    headerImage: "<%= asset_url("nav_logo.png") %>"
+    navLogo: "<%= asset_url("nav_logo.png") %>",
+    lebron: "<%= asset_url("lebron.jpeg") %>",
+    odell: "<%= asset_url("odell.jpeg") %>",
+    judge: "<%= asset_url("judge.jpeg") %>",
+    zucc: "<%= asset_url("zucc.jpeg") %>",
   }
 </script>
 
