--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -400,7 +400,7 @@
 }
 
 .post-profile-pic {
-  background-color: grey;
+  /* background-color: grey; */
   width: 38px;
   height: 38px;
   border: 1px solid rgb(0, 0, 0);
@@ -528,7 +528,7 @@
 }
 
 .nav-profile-pic {
-  background-color: grey;
+  /* background-color: grey; */
   width: 24px;
   height: 24px;
   border-radius: 12px;
@@ -600,7 +600,7 @@
 }
 
 .post-item-profile-pic {
-  background-color: grey;
+  /* background-color: grey; */
   width: 38px;
   height: 38px;
   border: 1px solid rgb(0, 0, 0);
