Remove all static images due to heroku error

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -9,10 +9,7 @@
 
 <script type="text/javascript">
   window.staticImages = {
-    navLogo: "<%= asset_url("nav_logo.png") %>",
-    odell: "<%= asset_url("odell.jpeg") %>",
-    judge: "<%= asset_url("judge.jpeg") %>",
-    zucc: "<%= asset_url("zucc.jpeg") %>",
+    navLogo: "<%= asset_url("nav_logo.png") %>"
   }
 </script>
 
