--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -9,7 +9,8 @@
 
 <script type="text/javascript">
   window.staticImages = {
-    navLogo: "<%= asset_url("nav_logo.png") %>"
+    navLogo: "<%= asset_url("nav_logo.png") %>",
+    judge: "<%= asset_url("judge.jpg") %>"
   }
 </script>
 
