--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -293,7 +293,7 @@
 
 .post-form-container {
   width: 516px;
-  height: 194px;
+  min-height: 194px;
   border: 1px solid rgb(221, 223, 226);
   margin: 13px;
   background-color: white;
@@ -329,17 +329,40 @@
   border: none;
 }
 
-.img-preview {
-  max-width: 100px;
+.post-body-wrapper {
+  display: flex;
+  justify-content: flex-start;
+  width: 516px;
+  flex-direction: column;
+}
+
+.post-form-text {
+  display: flex;
+  justify-content: flex-start;
+  width: 516px;
+}
+
+.img-preview-container {
+  display: flex;
+  justify-content: flex-start;
+  width: 516px;
+  align-items: center;
   max-height: 100px;
+  margin: 15px 0 15px 12px;
 }
 
-.make-post-modal-btn {
-
+.img-preview {
+  width: 100px;
+  height: 100px;
+  margin-right: 5px;
 }
+
+/* .make-post-modal-btn {
+
+} */
 
 .post-form-main {
-  height: 122px;
+  min-height: 122px;
   border-bottom: 1px solid rgb(221, 223, 226);
 }
 
@@ -423,11 +446,6 @@
   height: 38px;
   border-radius: 50%;
   margin: 12px 0 0 12px;
-}
-
-.post-body-wrapper {
-  display: flex;
-  justify-content: flex-start;
 }
 
 .post-body {
