--- a/app/assets/stylesheets/css_reset.css
+++ b/app/assets/stylesheets/css_reset.css
@@ -10,9 +10,17 @@ button:hover,
 select:focus,
 select:active,
 select:hover,
-{
+/* {
   outline:0px !important;
   -webkit-appearance:none;
   -webkit-box-shadow: none;
   box-shadow: none;
-}
+
+  border: none;
+  overflow: auto;
+  outline: none;
+
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+} */
