--- a/app/assets/stylesheets/signup.css
+++ b/app/assets/stylesheets/signup.css
@@ -113,7 +113,7 @@
 }
 
 #signup-btn:hover {
-
+  background: linear-gradient(#79bc64, #578843);
 }
 
 .birthday-signup p {
@@ -137,7 +137,7 @@
 
 .gender-signup {
   display: flex;
-  width: 175px;
+  justify-content: flex-start;
 }
 
 .gender-signup div {
@@ -148,16 +148,17 @@
 }
 
 .female {
-  width: 90px;
+  width: 110px;
 }
 
 .male {
-  width: 72px;
+  width: 110px;
 }
 
 .gender-signup input {
   margin: 3px;
   cursor: default;
+  width: 20px;
 }
 
 .gender-signup p {
