Remove profile_pic_url column from users

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -9,12 +9,7 @@
 
 <script type="text/javascript">
   window.staticImages = {
-    navLogo: "<%= asset_url("nav_logo.png") %>",
-    judge: "<%= asset_url("judge.jpg") %>",
-    lebron: "<%= asset_url("lebron.jpg") %>",
-    odell: "<%= asset_url("odell.jpg") %>",
-    zucc: "<%= asset_url("zucc.jpg") %>",
-    demo: "<%= asset_url("demo.jpg") %>"
+    navLogo: "<%= asset_url("nav_logo.png") %>"
   }
 </script>
 
