--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -72,12 +72,12 @@
   font-weight: 700;
   border-radius: 2px;
   cursor: pointer;
-  width: 41px;
   height: 26px;
+  margin-left: 685px;
 }
 
 .cancelCoverUpload:hover {
-  background-color: #e9ebee;
+  background-color: #d6d8db;
 }
 
 .saveCoverUpload {
@@ -90,7 +90,6 @@
   font-weight: 700;
   border-radius: 2px;
   cursor: pointer;
-  width: 83px;
   height: 26px;
 }
 
