--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -57,6 +57,7 @@
   width: 851px;
   height: 315px;
   background-color: gray;
+  position: relative;
 }
 
 .cover-photo-screen {
@@ -68,11 +69,26 @@
   align-items: flex-start;
   justify-content: flex-start;
   z-index: 2;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  cursor: pointer;
 }
+
+/* .cover-photo-btn {
+  background-color: black;
+  opacity: 0;
+  display: flex;
+} */
 
 .cover-photo-screen i {
   margin-left: 10px;
   margin-top: 10px;
+  z-index: 2;
+  color: white;
+  cursor: pointer;
 }
 
 .cover-photo-screen:hover {
