--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -161,9 +161,18 @@
 }
 
 .profile-picture-container {
-
+  width: 176px;
+  height: 176px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-radius: 2px;
+  position: absolute;
+  top: 208px;
+  left: 220px;
 }
 
 .profile-picture {
-
+  width: 168px;
+  height: 168px;
+  border: 4px solid white;
+  border-radius: 2px;
 }
