--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -255,6 +255,19 @@
   border-bottom: 1px solid rgb(229, 229, 229);
   padding: 10px 12px;
   border-radius: 3px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.modal-upload-header p {
+  margin: 0;
+}
+
+.modal-upload-header span {
+  margin-left: 180px;
+  display: flex;
+  align-items: center;
 }
 
 .modal-upload-footer {
