Add hover on entire prof pic

--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -200,7 +200,11 @@
   cursor: pointer;
 }
 
-.profile-pic-btn:hover {
+/* .profile-picture:hover .profile-pic-btn {
+  background-color: black;
+} */
+
+.prof-pic-hover:hover .profile-pic-btn {
   background-color: black;
 }
 
