Only allow current user to update their own cover photo

--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -66,6 +66,10 @@
   height: 100px;
 }
 
+.cover-photo-screen-hidden {
+  display: none;
+}
+
 .cover-photo-screen {
   width: 851px;
   height: 315px;
